[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ovnis.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ovnis.gd" type="Script" id=2]

[node name="Ovnis" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="ovnis" type="Sprite" parent="."]
position = Vector2( 0.946186, -0.949109 )
scale = Vector2( 0.197728, 0.119972 )
texture = ExtResource( 1 )

[node name="Canon" type="Position2D" parent="."]
position = Vector2( 0.489876, 4.08936 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.530107, -0.158729 )
scale = Vector2( 0.563045, 0.39169 )
polygon = PoolVector2Array( 0.268734, -30.4942, 54.533, 4.17461, 13.8348, 28.2921, -52.4882, 11.7113, 0.268734, -30.4942 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.231644, 0 )
scale = Vector2( 1.99608, 1 )
[connection signal="body_entered" from="." to="." method="_on_Ovnis_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
